# IIITGuwahati-Labs

 Java Lab/DeepTest/: input.txt
 Java Lab/JavaEndSem/: ServerData.txt
 Java Lab/PrevEndSem/: Server.ser
 Java Lab/RayTracing/: output.ppm
AI-Lab-main/: LICENSE
AI-Lab-main/8 Puzzle/: gui.py  main.py
AI-Lab-main/AI Lab Practise/: 8 Queens Complete.py  MissionaryAndCannibals.py  Water Jug.py  numpyAndPandas.py
AI-Lab-main/AI Midsem LabTest/: 2201075_Q1a.py  2201075_Q1b.py  2201075_Q1b.txt  2201075_Q2.py
AI-Lab-main/Assignment 2/: Q1.py  Q2.py  Q3.py  Q4.py  Q4_a.txt  Q4_b_source.txt  Q4_c.txt  Q5.py  Q6.py  Q7.py  Q8.py
AI-Lab-main/Assignment 3/: Q1.py  Q2.py  Q3.py  data_q1.txt  data_q3a_output.txt  q2_output.txt
AI-Lab-main/Assignment 4 8 Queens Problem/: 8 Queens Complete BFS.py  8 Queens Complete DFS.py  8 Queens Complete Iterative Depth.py  8 Queens Incremental DFS.py  8Queens Incremental BFS.py  (+2 more)
AlgoLab-main/Graph/: BFS.hpp  BellmanFord.hpp  Bipartite.hpp  CMakeLists.txt  ConnectedGraph1.hpp  ConnectedGraph2.hpp  DFS.hpp  Dijstra's.hpp  DirectedGraphWithoutWeights.hpp  DirectedGraphWithoutWeightsVer2.hpp  DirectedGraphsWithWeight.hpp  DoublyLinkedList.hpp  FloydWarshall.hpp  Graph1.txt  Graph2.txt  Graph3.txt  Kruska'swithUnionByRank.hpp  Kurskal'sWithLinkedLIst.hpp  Prims.hpp  PrimsWithMinHeap.hpp  SCC.hpp  StronglyConnectedGraph.hpp  TopologicalSorting.hpp  TypesOfEdges.hpp  UndirectedGraphWithWeights.hpp  UndirectedGraphWithWeightsVer2.hpp  main.cpp
DBMS-Lab-main/: LICENSE
OS-Lab-main/: 2201075_test4  Deadlock Ver 2  LICENSE  test1
(+217 files in other folders)
